
	PIG-83: Change everything except grunt and Main (PigServer on down) to use
	common logging abstraction instead of log4j.  By default in grunt, log4j
	still used as logging layer.  Also converted all System.out/err.println
	statements to use logging instead. (francisoud via gates)

	PIG-80: In a number of places stack trace information was being lost by an
	exception being caught, and a different exception then thrown.  All those
	locations have been changed so that the new exception now wraps the old.
	(francisoud via gates).

	PIG-84: Converted printStackTrace calls to calls to the logger.
	(francisoud via gates).

	PIG-88: Remove unused HadoopExe import from Main.  (pi_song via gates).

	PIG-99: Fix to make unit tests not run out of memory. (francisoud via
	gates).

    PIG-107: enabled several tests. (francisoud via olgan)

    PIG-46: abort processing on error for non-interactive mode (olston via
    olgan)

    PIG-109: improved exception handling (oae via olgan)

	PIG-72: Move unit tests to use MiniDFS and MiniMR so that unit tests can
	be run w/o access to a hadoop cluster. (xuzh via gates)

    PIG-68: improvements to build.xml (joa23 via olgan)

	PIG-110: Replaced code accidently merged out in PIG-32 fix that handled
	flattening the combiner case. (gates and oae)

    PIG-68 broke the build process by hardwiring hadoop15 jar for the purpose
    of compile. Fixed that (olgan)
    
    PIG-124: only run one test (ant test -Dtestcase=TestMapReduce) not the 
    complete test suite (xuzh vi olgan)

    PIG-127: changes to build.xml to have description for each target
    (francisoud via olgan)

    PIG-101: changes in tests to use enum type (francisoud via olgan)

	PIG-125: Improve exception handling in cases when an attempt is made to
	access a field as a tuple, and it turns out not to be a tuple (oae via
	gates).

    PIG-13: adding version to the system (joa23 via olgan)

	PIG-113:  Make explain output more understandable (pi_song via gates)